Mobile navbar spacing fix in projects page

--- a/src/projects/projects.css
+++ b/src/projects/projects.css
@@ -12,7 +12,7 @@
     position: relative;
     text-align: center;
     z-index: -1;
-    margin-top: -20px;
+    margin-top: -10px;
 }
 
 .projectpage .tiptoeNameProj {
